<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           >

            <TextView
                style="@style/text_black"
                android:text="@string/normal" />

            <com.android.modern.BottomNavigation 
                android:id="@+id/bmn_normal"
                style="@style/bmn_primary_bg"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/no_animation" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_no_animation"
                style="@style/bmn_primary_bg"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/no_shifting_mode" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_no_shifting_mode"
                style="@style/bmn_primary_bg"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/no_item_shifting_mode" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_no_item_shifting_mode"
                style="@style/bmn_primary_bg"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/no_text" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_no_text"
                style="@style/bmn_primary_bg"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/no_icon" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_no_icon"
                style="@style/bmn_primary_bg"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/no_animation_shifting_mode" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_no_animation_shifting_mode"
                style="@style/bmn_primary_bg"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/no_animation_item_shifting_mode" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_no_animation_item_shifting_mode"
                style="@style/bmn_primary_bg"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/no_animation_shifting_mode_item_shifting_mode" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_no_animation_shifting_mode_item_shifting_mode"
                style="@style/bmn_primary_bg"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/no_shifting_mode_item_shift_mode_text" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_no_shifting_mode_item_shifting_mode_text"
                style="@style/bmn_primary_bg"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/no_animation_shifting_mode_item_shifting_mode_text" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_no_animation_shifting_mode_item_shifting_mode_text"
                style="@style/bmn_primary_bg"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/no_shifting_mode_item_shifting_mode_icon" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_no_shifting_mode_item_shifting_mode_and_icon"
                style="@style/bmn_primary_bg"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/no_item_shifting_mode_icon" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_no_item_shifting_mode_icon"
                style="@style/bmn_primary_bg"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/no_animation_shifting_mode_item_shifting_mode_icon" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_no_animation_shifting_mode_item_shifting_mode_icon"
                style="@style/bmn_primary_bg"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/with_padding" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_with_padding"
                style="@style/bmn_primary_bg"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/center_icon_only" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_center_icon_only"
                style="@style/bmn_primary_bg"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation_center_icon_only" />

            <TextView
                style="@style/text_black"
                android:text="@string/smaller_text" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_smaller_text"
                style="@style/bmn_primary_bg"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/bigger_icon" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_bigger_icon"
                style="@style/bmn_primary_bg"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/custom_typeface" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_custom_typeface"
                style="@style/bmn_primary_bg"
                app:itemIconTint="@color/selector_item_gray_color"
                app:itemTextColor="@color/selector_item_gray_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/icon_selector" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_icon_selector"
                style="@style/bmn_white_bg"
                app:itemTextColor="@color/selector_item_primary_color"
                app:menu="@menu/menu_navigation_selector" />

            <TextView
                style="@style/text_black"
                android:text="@string/icon_margin_top" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_icon_margin_top"
                style="@style/bmn_white_bg"
                app:itemIconTint="@color/selector_item_primary_color"
                app:itemTextColor="@color/selector_item_primary_color"
                app:menu="@menu/menu_navigation" />

            <TextView
                style="@style/text_black"
                android:text="@string/unchecked_first_time" />

            <com.android.modern.BottomNavigation
                android:id="@+id/bmn_unchecked_first_time"
                style="@style/bmn_white_bg"
                app:itemIconTint="@color/selector_item_primary_color"
                app:itemTextColor="@color/selector_item_primary_color"
                app:menu="@menu/menu_navigation" />

        </LinearLayout>

    </ScrollView>

</layout>